<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.taun15a16.group5.mjilkmjecipes.LogInActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/text_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_login_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_login__email"
        android:hint="@string/text_login_email" />

    <TextView
        android:text="@string/text_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_login_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_login_password"
        android:hint="@string/text_login_password" />

    <Button
        android:text="@string/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login_login"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/btn_login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login_signup" />

    <TextView
        android:text="Or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBy"
        android:textAlignment="center"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
