<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.taun15a16.group5.mjilkmjecipes.ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/text_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_profile_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_profile_username"
            android:hint="@string/text_profile_username"
            android:enabled="false" />

        <TextView
            android:text="@string/text_profile_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_profile_longitude"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_profile_longitude"
            android:hint="@string/text_profile_longitude" />

        <TextView
            android:text="@string/text_profile_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_profile_latitude" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_profile_latitude"
            android:hint="@string/text_profile_latitude" />

        <Button
            android:text="@string/btn_profile_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_profile_save_changes"
            android:layout_marginTop="20dp" />
    </LinearLayout>


</ScrollView>
