<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.taun15a16.group5.mjilkmjecipes.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutSignupBar"
        android:visibility="gone">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="100dp"
            android:id="@+id/signupProgressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp" />

        <TextView
            android:text="@string/text_signing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupProgressBar"
            android:layout_centerHorizontal="true"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup_username"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_signup_username"
            android:hint="@string/text_signup_username" />

        <TextView
            android:text="@string/text_signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_signup_password"
            android:hint="@string/text_signup_password" />

        <TextView
            android:text="@string/text_signup_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_signup_confirm_password"
            android:hint="@string/text_signup_confirm_password" />

        <TextView
            android:text="Allow GPS Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:text="Allow GPS Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_signup_location"
            android:textAppearance="@android:style/TextAppearance.Material.Small"/>

        <Button
            android:text="@string/btn_signup_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signup_signup"
            android:layout_marginTop="20dp" />
    </LinearLayout>


</LinearLayout>
