<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_comment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.taun15a16.group5.mjilkmjecipes.NewCommentActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/rl_view"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/show_options_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="Foto"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/set_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/text_new_recipe_image_description"
            android:layout_below="@+id/show_options_button"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/set_picture"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_comment_ratingBar_comment_rating"
                android:numStars="5"
                android:stepSize="1"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/new_comment_editText_comment"
                android:layout_below="@+id/new_recipe_editText_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/text_new_comment_comment" />

            <Button
                android:text="@string/text_new_comment_create_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_new_comment_send"
                android:onClick="sendToServer" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
